Fixed menu on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 #app {
  display: flex;
  flex-flow: row;
+ z-index: -1;
 }
 
 /*Text*/
@@ -85,7 +86,6 @@ h5.pillar,
 body,
 #container {
  margin: 0px auto;
- display: flex;
  width: 100%;
 }
 
@@ -94,6 +94,7 @@ body,
  margin: 0px auto;
  position: fixed;
  display: block;
+ z-index: 9999;
 }
 
 #header .logobar {
@@ -215,7 +216,7 @@ div.pillar {
 
 /*Input*/
 #input {
- width: 300px;
+ min-width: 300px;
  height: 100%;
  border-right: 1px solid #dddddd;
  background-color: #ffffff;
@@ -289,7 +290,6 @@ div.pillar {
 /*Output*/
 #output {
  padding: 0px 20px 20px 20px;
- z-index: -1;
 }
 
 #output .image_screen {
@@ -638,8 +638,11 @@ div.pillar {
  }
  
  /* Menu */
+ #header .logobar div#mobMenuIcon {
+  padding: 11px;
+ }
 
- #header .logobar #mobMenuIcon {
+ #header .logobar div#mobMenuIcon i {
   color: #ffffff;
   cursor: pointer;
   display: block
@@ -652,19 +655,24 @@ div.pillar {
 }
 
 @media screen and (max-width: 426px) {
+ /* Container */
+ #container {
+  display: initial;
+ }
  /* Header */
- #header .logo {
-  width: 150px
+ #header {
+  width: 100vw;
  }
 
- #app, #content {
-  padding-top: 69px;
-  margin-bottom: 20px;
+ #header .logo {
+  width: 150px
  }
 
  /* Menu */
  #navbar.menu.active {
   display: block;
+  -webkit-box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.26); 
+  box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.26);
  }
 
  #navbar.menu.active li, 
@@ -681,5 +689,42 @@ div.pillar {
  #navbar.menu.active li:active, 
  #navbar.menu.active li:hover {
   background-color: rgba(17, 211, 190, 0.25);
+ }
+
+ /* App */
+ #app, #content {
+  padding-top: 69px;
+  margin-bottom: 20px;
+ }
+
+ #app {
+  width: 100vw;
+  flex-flow: column;
+  overflow: hidden;
+  z-index: -1;
+ }
+
+ #app.menuOpen::before,
+ #content.menuOpen::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  position: fixed;
+  margin: -20px;
+ }
+
+ #input {
+  width: 100%;
+  border: none;
+  height: auto;
+ }
+
+ #input [type="text"] {
+  width: calc(100vw - 50px);
+ }
+
+ #input .sliderContainer .sliderBox input {
+  width: 50%;
  }
 }
